# pico-webserver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  index.rst  main.rst  modules.rst
src/micropython_default/: main.py
src/micropython_default/lib/project/: telemetry.py  utility.py
src/micropython_default/server/: index.html
src/pico-webserver/: main.py
src/pico-webserver/env/: secrets.py
src/pico-webserver/lib/microdot/: __init__.py  microdot.py
src/pico-webserver/lib/project/: connection.py
src/pico-webserver/server/: main.py
src/pico-webserver/server/lib/: typing.py
src/pico-webserver/server/lib/project/: utility.py
